// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addDirections multiple direction sections 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "label": "section 1",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "3",
        "sectionid": "1",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "2",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "1",
        "sectionid": "2",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
      Object {
        "createdAt": "2020-05-10 00:11:45.511 +00:00",
        "id": "2",
        "sectionid": "2",
        "text": "step 2",
        "updatedAt": "2020-05-10 00:12:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addDirections single direction section, all fields 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "label": "section 1",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "3",
        "sectionid": "1",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addDirections single section, no steps provided, only label 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "label": "section 1",
    "recipeid": "123",
    "steps": Array [],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addDirections single section, only steps provided, no label 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "2",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "1",
        "sectionid": "2",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
      Object {
        "createdAt": "2020-05-10 00:11:45.511 +00:00",
        "id": "2",
        "sectionid": "2",
        "text": "step 2",
        "updatedAt": "2020-05-10 00:12:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addIngredients multiple ingredient sections 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "ingredients": Array [
      Object {
        "amount": "2",
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": "1",
        "name": "apples",
        "optional": true,
        "prep": "chopped",
        "sectionid": "2",
        "toTaste": true,
        "unit": "cup",
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
    ],
    "label": "ingredient section 1",
    "recipeid": "102",
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "2",
    "ingredients": Array [
      Object {
        "amount": "1",
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": "3",
        "name": "garlic",
        "prep": "minced",
        "sectionid": "2",
        "unit": "tablespoon",
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
    ],
    "recipeid": "102",
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addIngredients single ingredient section, all fields 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "ingredients": Array [
      Object {
        "amount": "2",
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": "1",
        "name": "apples",
        "optional": true,
        "prep": "chopped",
        "sectionid": "2",
        "toTaste": true,
        "unit": "cup",
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
    ],
    "label": "ingredient section 1",
    "recipeid": "102",
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addIngredients single section, no ingredients provided, only label 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "ingredients": Array [],
    "label": "ingredient section 1",
    "recipeid": "102",
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addIngredients single section, only ingredients provided, no label 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "2",
    "ingredients": Array [
      Object {
        "amount": "2",
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": "1",
        "name": "apples",
        "optional": true,
        "prep": "chopped",
        "sectionid": "2",
        "toTaste": true,
        "unit": "cup",
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
      Object {
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": "2",
        "name": "garlic",
        "optional": false,
        "prep": "minced",
        "rangedAmount": Object {
          "createdAt": "2020-05-10 00:07:45.511 +00:00",
          "id": "1",
          "ingredientid": "2",
          "max": "10",
          "min": "5",
          "updatedAt": "2020-05-10 00:08:45.511 +00:00",
        },
        "sectionid": "2",
        "toTaste": true,
        "unit": "tablespoon",
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
    ],
    "recipeid": "102",
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addRecipe calls store creator and returns result 1`] = `
Object {
  "dateAdded": "2020-05-10 00:00:45.511 +00:00",
  "dateUpdated": "2020-05-10 00:00:45.511 +00:00",
  "description": "some description",
  "directions": Array [
    Object {
      "label": "section 1",
      "steps": Array [
        Object {
          "text": "step 1",
        },
        Object {
          "text": "step 2",
        },
      ],
    },
  ],
  "id": "123",
  "ingredients": Array [
    Object {
      "ingredients": Array [
        Object {
          "amount": "2",
          "name": "apples",
          "optional": true,
          "prep": "chopped",
          "toTaste": true,
          "unit": "cup",
        },
      ],
      "label": "ingredient section 1",
    },
    Object {
      "ingredients": Array [
        Object {
          "amount": Object {
            "max": "10",
            "min": "5",
          },
          "name": "garlic",
          "optional": false,
          "prep": "minced",
          "toTaste": true,
          "unit": "tablespoon",
        },
      ],
    },
  ],
  "photo": "http://photos.com/mine.jpg",
  "servings": 4,
  "source": Object {
    "display": "My Recipe source",
    "url": "http://source.com",
  },
  "tags": Array [
    Object {
      "id": "1",
      "recipeid": "123",
      "tagid": "1",
    },
    Object {
      "id": "2",
      "recipeid": "123",
      "tagid": "23",
    },
  ],
  "timing": Object {
    "prep": Array [
      Object {
        "units": "MINUTE",
        "value": "2",
      },
    ],
    "total": Array [
      Object {
        "units": "MINUTE",
        "value": "20",
      },
      Object {
        "units": "HOUR",
        "value": "1",
      },
    ],
  },
  "title": "my title",
}
`;

exports[`addTags multiple tags 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "recipeid": "123",
    "tagid": "1",
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "2",
    "recipeid": "123",
    "tagid": "23",
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`constructIngredientObj only ingredient fields has subset of fields 1`] = `
Object {
  "name": "apples",
  "prep": "chopped",
  "sectionid": "42",
}
`;

exports[`constructIngredientObj only ingredient fields has subset of fields that are false 1`] = `
Object {
  "name": "apples",
  "optional": false,
  "prep": "chopped",
  "sectionid": "42",
  "toTaste": false,
}
`;

exports[`deleteRecipe calls store destroy and returns result - id exists 1`] = `
Object {
  "message": undefined,
  "recipe": null,
  "success": true,
}
`;

exports[`deleteRecipe calls store destroy and returns result - id not found 1`] = `
Object {
  "message": "ID not found",
  "recipe": null,
  "success": false,
}
`;

exports[`getAllRecipes returns array of recipes 1`] = `
Array [
  Object {
    "dateAdded": "2020-05-10 00:00:45.511 +00:00",
    "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
    "description": "the best recipe ever",
    "directions": Array [
      Object {
        "label": "section 1",
        "steps": Array [
          Object {
            "text": "step 1",
          },
          Object {
            "text": "step 2",
          },
        ],
      },
    ],
    "id": "123",
    "ingredients": Array [
      Object {
        "ingredients": Array [
          Object {
            "amount": "2",
            "name": "apples",
            "optional": true,
            "prep": "chopped",
            "toTaste": true,
            "unit": "cup",
          },
          Object {
            "amount": Object {
              "max": "10",
              "min": "5",
            },
            "name": "garlic",
            "optional": false,
            "prep": "minced",
            "toTaste": true,
            "unit": "tablespoon",
          },
        ],
        "label": "ingredient section 1",
      },
    ],
    "photo": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source": Object {
      "display": "Mandy's Kitchen",
      "url": "http://some.url.com/recipe",
    },
    "tags": Array [
      Object {
        "id": "1",
        "recipeid": "123",
        "tagid": "1",
      },
      Object {
        "id": "2",
        "recipeid": "123",
        "tagid": "23",
      },
    ],
    "timing": Object {
      "prep": Array [
        Object {
          "units": "MINUTE",
          "value": "2",
        },
      ],
      "total": Array [
        Object {
          "units": "MINUTE",
          "value": "20",
        },
        Object {
          "units": "HOUR",
          "value": "1",
        },
      ],
    },
    "title": "my first recipe",
  },
]
`;

exports[`getRecipe returns recipe 1`] = `
Object {
  "dateAdded": "2020-05-10 00:00:45.511 +00:00",
  "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
  "description": "the best recipe ever",
  "directions": Array [
    Object {
      "label": "section 1",
      "steps": Array [
        Object {
          "text": "step 1",
        },
        Object {
          "text": "step 2",
        },
      ],
    },
  ],
  "id": "123",
  "ingredients": Array [
    Object {
      "ingredients": Array [
        Object {
          "amount": "2",
          "name": "apples",
          "optional": true,
          "prep": "chopped",
          "toTaste": true,
          "unit": "cup",
        },
        Object {
          "amount": Object {
            "max": "10",
            "min": "5",
          },
          "name": "garlic",
          "optional": false,
          "prep": "minced",
          "toTaste": true,
          "unit": "tablespoon",
        },
      ],
      "label": "ingredient section 1",
    },
  ],
  "photo": "http://some.url.com/pic.jpg",
  "servings": 2,
  "source": Object {
    "display": "Mandy's Kitchen",
    "url": "http://some.url.com/recipe",
  },
  "tags": Array [
    Object {
      "id": "1",
      "recipeid": "123",
      "tagid": "1",
    },
    Object {
      "id": "2",
      "recipeid": "123",
      "tagid": "23",
    },
  ],
  "timing": Object {
    "prep": Array [
      Object {
        "units": "MINUTE",
        "value": "2",
      },
    ],
    "total": Array [
      Object {
        "units": "MINUTE",
        "value": "20",
      },
      Object {
        "units": "HOUR",
        "value": "1",
      },
    ],
  },
  "title": "my first recipe",
}
`;
